<resources>
    <string name="app_name">MultiApp</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>

    <string-array name="names">
        <item>Home</item>
        <item>Calculator</item>
        <item>Email</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="mult">*</string>
    <string name="deci">.</string>
    <string name="_0">0</string>
    <string name="clearButton">C</string>
    <string name="div">/</string>
    <string name="equals">=</string>
</resources>
